[project]
name = "pynng"
authors = [
    {name = "Cody Piersall", email = "cody.piersall@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = [
    "cffi",
    "sniffio",
]
description = "Networking made simply using nng"
# Note: license = "MIT" (PEP 639) requires setuptools >= 77 or scikit-build-core.
# Keep the old format until the build system migration lands.
license = {file = "LICENSE.txt"}
dynamic = ["version"]
keywords = [
    "networking",
    "nng",
    "nanomsg",
    "zmq",
    "messaging",
    "message",
    "trio",
    "asyncio",
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-trio",
    "trio",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-trio",
]

[project.urls]
Homepage = "https://github.com/codypiersall/pynng"
Source = "https://github.com/codypiersall/pynng"
Documentation = "https://pynng.readthedocs.io/en/latest/"

[tool.setuptools_scm]
version_file = "pynng/_version.py"
[tool.setuptools.packages.find]
include = ["pynng"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools==75.3.2",
    "setuptools-scm",
    "cffi",
    "cmake",
    "build",
    "wheel",
]

[tool.cibuildwheel]
test-requires = [
    "pytest",
    "pytest-asyncio",
    "pytest-trio",
    "trio",
]

test-command = "pytest {project}/test"

# https://github.com/python/cpython/issues/127294
skip = "cp314t-win*"

build-verbosity = 1

[tool.cibuildwheel.windows]
# Windows builds fail because they try to use the same directory for different
# architectures, and that's no good.
before-build = "bash .github/rmstuff.sh"

[tool.cibuildwheel.macos]
# Specify universal2 building for macOS
archs = ["universal2"]
environment = { CMAKE_OSX_ARCHITECTURES="x86_64;arm64" }

[tool.black]
# Just a placeholder because I have a plugin that won't run without a section in
# pyproject.toml
target-version = ["py310"]

# pytest configuration
[tool.pytest.ini_options]
addopts = "--capture=no --verbose"
testpaths = "test"
