[project]
name = "pynng"
authors = [{ name = "Cody Piersall", email = "cody.piersall@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
]
dependencies = ["cffi>=1.15.0", "sniffio>=1.3.0"]
description = "Networking made simply using nng"
license = { text = "MIT" }
dynamic = ["version"]
keywords = [
    "networking",
    "nng",
    "nanomsg",
    "zmq",
    "messaging",
    "message",
    "trio",
    "asyncio",
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0", "pytest-trio>=0.8.0", "trio>=0.22.0", "headerkit>=0.18.0"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-trio"]

[project.urls]
Homepage = "https://github.com/codypiersall/pynng"
Source = "https://github.com/codypiersall/pynng"
Documentation = "https://pynng.readthedocs.io/en/latest/"

[build-system]
build-backend = "scikit_build_core.build"
requires = [
    "scikit-build-core>=0.8.0",
    "cffi",
    "cffi_buildtool",
    "headerkit>=0.18.0",
    "setuptools-scm",
]

[tool.scikit-build]
wheel.packages = ["pynng"]
wheel.py-api = "cp310"
cmake.version = ">=3.26"
cmake.verbose = true
minimum-version = "0.8.0"
build-dir = "./build/{cache_tag}"
cmake.define = { "CMAKE_POSITION_INDEPENDENT_CODE" = "ON" }
cmake.build-type = "Release"

[tool.setuptools_scm]
version_file = "pynng/_version.py"

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-requires = ["pytest", "pytest-asyncio", "pytest-trio", "trio", "headerkit>=0.18.0"]
# test_build.py tests the build system (header parsing via libclang), not the installed wheel.
# It runs in smoketest (source checkout with build deps); cibuildwheel tests the installed wheel.
test-command = "pytest {project}/test --ignore={project}/test/test_build.py"

# Free-threaded CPython is not supported (CFFI does not support it).
# *-win32: 32-bit Python can't load 64-bit libclang.dll (no 32-bit libclang available).
build = "cp3*"
enable = ["pypy"]
skip = ["*-win32"]

build-verbosity = 1

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# Mount a host directory so the headerkit store persists outside the container.
# cibuildwheel copies (not mounts) the project, so .headerkit/ would be lost otherwise.
container-engine = { name = "docker", create-args = [
    "--volume", "/tmp/headerkit-store:/headerkit-store"
]}
environment = { HEADERKIT_STORE_DIR = "/headerkit-store" }

[tool.cibuildwheel.windows]
# Windows builds fail because they try to use the same directory for different
# architectures, and that's no good.
before-build = "python -c \"import shutil; shutil.rmtree('build', ignore_errors=True)\""

[tool.cibuildwheel.macos]
archs = ["universal2"]
environment = { CMAKE_OSX_ARCHITECTURES = "x86_64;arm64" }

[tool.pytest.ini_options]
addopts = "--capture=no --verbose"
testpaths = ["test"]
